assets/css/styles.css
:root {
  --black: #1a1a1a;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
  scroll-padding-top: 5rem;
}

body {
  font-family: 'canada-type-gibson', sans-serif;
  line-height: 1.5;
  color: #1e1715;
}
img {
  max-width: 100%;
}
button {
  cursor: pointer;
}
button,
input,
textarea {
  font-family: inherit;
}

/* ======================================= Header ======================================= */

.header {
  background-color: #fff;
  position: sticky;
  top: 0;
}
.header__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 20px 15px 17px;
  background-color: #fff;
  position: relative;
}

.header__logo img {
  vertical-align: middle;
}
.header__logo img,
.nav__logo img {
  width: 111px;
  height: auto;
}

.header__hamburger {
  background: none;
  border: none;
  font-size: 24px;
  cursor: pointer;
  display: flex;
  padding: 11px 0 11px 7px;
}

.header__nav {
  position: fixed;
  right: -100%;
  top: 0;
  background-color: white;
  padding: 58px 40px;
  transition: right 0.3s ease-in-out;
  z-index: 6;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  text-align: right;
  min-width: 320px;
  border-radius: 10px 0 0 10px;
  min-height: 100svh;
  max-height: 100svh;
  overflow-y: scroll;
}

.header__nav--active {
  right: 0;
}

.nav__list {
  list-style: none;
  border-bottom: 1px solid #e6e6e6;
  width: 100%;
  padding-top: 56px;
  padding-bottom: 56px;
}

.nav__item {
  margin-top: 22px;
}

.nav__link {
  text-decoration: none;
  color: #1e1715;
  font-size: 18px;
}
.nav__logo {
  margin-bottom: auto;
}

.nav__login-btn {
  font-size: 14px;
  font-family: inherit;
  line-height: 1;
  display: inline-block;
  margin-top: 30px;
  padding: 6px 26px;
  border: 2px solid #1e1715;
  text-decoration: none;
  color: var(--black);
  background-color: transparent;
  border-radius: 6px;
}
/* Overlay styles */
.header__overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgb(26, 26, 26, 0.89);
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease-in-out;
  z-index: 5;
}

/* When the overlay is active (menu is open) */
.header__overlay--active {
  opacity: 1;
  visibility: visible;
}

/* Disable body scroll when the menu is open */
.body--menu-open {
  overflow: hidden;
}

/* Desktop View */

@media (min-width: 1024px) {
  html {
    scroll-padding-top: 7rem;
  }
  .header__wrapper {
    max-width: 1352px;
    padding: 30px 40px;
    margin-left: auto;
    margin-right: auto;
  }
  .header__logo img {
    width: 165px;
  }
  .header__hamburger {
    display: none;
  }

  .header__nav {
    position: static;
    height: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: auto;
    padding: 0;
    gap: 40px;
    min-height: auto;
  }

  .nav__list {
    display: flex;
    gap: 28px;
    margin: 0;
    padding: 0;
    border-bottom: 0;
  }
  .nav__item {
    margin-top: 0;
  }
  .nav__link {
    font-size: 17px;
    font-weight: 300;
  }
  .nav__login-btn {
    font-size: 17px;
    padding: 10px 26px 9px;
    min-width: fit-content;
    margin-top: 0;
  }
  .nav__logo {
    display: none;
  }
  .header__overlay--active {
    opacity: 0;
    visibility: hidden;
  }
}

/* ======================================= Hero ======================================= */
.container {
  padding: 0 20px;
  max-width: 520px;
  margin-left: auto;
  margin-right: auto;
}

.hero {
  text-align: center;
  margin: 0 20px;
  padding-top: 40px;
  padding-bottom: 30px;
  background-color: #fbfbfb;
  border-radius: 20px;
}
.hero .container {
  padding: 0;
}

.hero__title {
  font-size: 37px;
  font-weight: 500;
  margin-top: 20px;
  letter-spacing: -0.03em;
  line-height: 1.03;
}

.hero__description {
  font-size: 15px;
  margin-top: 16px;
  font-weight: 300;
  letter-spacing: 0.01em;
  line-height: 1.67;
}

.hero__cta-button {
  background-color: #ee362f;
  background-color: #e70f0e;
  color: white;
  padding: 12px 30px 13px;
  text-decoration: none;
  border-radius: 5px;
  font-size: 16px;
  font-weight: 300;
  width: 100%;
  display: inline-block;
  max-width: 335px;
  margin-top: 25px;
}

.hero__image {
  margin-left: 13px;
  margin-right: -3px;
}

/* Desktop View */

@media (min-width: 1024px) {
  .container {
    max-width: 1352px;
    padding: 0 40px;
  }
  .hero {
    padding-top: 96px;
    padding-bottom: 136px;
    margin: 0 40px 48px;
  }

  .hero .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 40px;
  }
  .hero__text {
    flex-basis: 50%;
  }

  .hero__title {
    font-size: 81px;
    line-height: 1;
    margin-top: 65px;
  }
  .hero__text {
    text-align: left;
  }
  .hero__description {
    font-size: 24px;
    line-height: 1.46;
    margin-top: 36px;
    margin-right: 36px;
    letter-spacing: 0;
  }
  .hero__cta-button {
    font-size: 22px;
    min-width: fit-content;
    width: auto;
    padding: 19px 36px 18px;
    margin-top: 45px;
  }

  .hero__image {
    margin-left: 0;
    flex-basis: 55%;
    max-width: 55%;
    order: 1;
  }
  .hero__image img {
    margin-bottom: -50px;
  }
}
@media (min-width: 1440px) {
  .hero__image {
    margin-right: -84px;
  }
}

/* ==================================== Features Section ==================================== */
.features {
  margin-top: 60px;
  overflow-x: clip;
}
.features__header {
  text-align: center;
  padding-bottom: 48px;
  border-bottom: 1px solid #e6e6e6;
}
.features__headline {
  font-size: 35px;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.02em;
}
.features__subhead {
  font-size: 18px;
  font-weight: 300;
  line-height: 1.39;
  margin-top: 22px;
}
.features__items {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 70px 0;
  gap: 90px;
}
/* ... */

